knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Preventive_Care_Agreement_Junction__c/Preventive_Care_Agreement_Junction__c.object-meta.xml
<CustomObject>
    <label>Preventive Care Agreement Junction</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Preventive Care Agreement Junctions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>