knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Preventive_Care_Agreement_Junction__c/fields/Admin_Hours__c.field-meta.xml
<CustomField>
    <fullName>Admin_Hours__c</fullName>
    <formula>Preventive_Care_Agreement__r.Admin_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Admin Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>