knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Preventive_Care_Agreement_Junction__c/fields/Agreement__c.field-meta.xml
<CustomField>
    <fullName>Agreement__c</fullName>
    <label>Agreement</label>
    <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
    <relationshipLabel>Preventive Care Agreement Junctions</relationshipLabel>
    <relationshipName>Preventive_Care_Agreement_Junctions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>