knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Preventive_Care_Agreement_Junction__c/fields/Code_Set_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Code_Set_Sub_Type__c</fullName>
    <formula>TEXT(Preventive_Care_Agreement__r.Type__r.Code_Set_Sub_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Code Set Sub Type</label>
    <type>Text</type>
</CustomField>