knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Preventive_Care_Agreement_Junction__c/fields/Code_Type__c.field-meta.xml
<CustomField>
    <fullName>Code_Type__c</fullName>
    <formula>Preventive_Care_Agreement__r.Type__r.Code</formula>
    <label>Code Type</label>
    <type>Text</type>
</CustomField>