knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Preventive_Care_Agreement_Junction__c/fields/Contract_Payment_Agreement_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Payment_Agreement_Type__c</fullName>
    <formula>TEXT(Preventive_Care_Agreement__r.ContractPaymentAgreement.Type__c)</formula>
    <label>Contract Payment Agreement Type</label>
    <type>Text</type>
</CustomField>