knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Preventive_Care_Agreement_Junction__c/fields/Contract_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Start_Date__c</fullName>
    <formula>Agreement__r.Contract__r.StartDate</formula>
    <label>Contract Start Date</label>
    <type>Date</type>
</CustomField>