knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Preventive_Care_Agreement_Junction__c/fields/Duration_Months__c.field-meta.xml
<CustomField>
    <fullName>Duration_Months__c</fullName>
    <formula>Preventive_Care_Agreement__r.Duration_Months__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>