knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Preventive_Care_Agreement_Junction__c/fields/Exhibit_A__c.field-meta.xml
<CustomField>
    <fullName>Exhibit_A__c</fullName>
    <label>Exhibit A</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>