knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Preventive_Care_Agreement_Junction__c/fields/Facility_Name__c.field-meta.xml
<CustomField>
    <fullName>Facility_Name__c</fullName>
    <formula>Preventive_Care_Agreement__r.ContractPaymentAgreement.Provider_Network_Contract__r.Healthcare_Practitioner_Facility__r.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Facility Name</label>
    <type>Text</type>
</CustomField>