knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Preventive_Care_Agreement_Junction__c/fields/Facility_Rate_RVU_Metric__c.field-meta.xml
<CustomField>
    <fullName>Facility_Rate_RVU_Metric__c</fullName>
    <formula>TEXT(Preventive_Care_Agreement__r.Facility_Rate__r.RVU_Metric_Type__c)</formula>
    <label>Facility Rate RVU Metric</label>
    <type>Text</type>
</CustomField>