knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Preventive_Care_Agreement_Junction__c/fields/Has_Leadership__c.field-meta.xml
<CustomField>
    <fullName>Has_Leadership__c</fullName>
    <formula>Preventive_Care_Agreement__r.ContractPaymentAgreement.Provider_Network_Contract__r.Healthcare_Practitioner_Facility__r.Facility_Title__r.Can_Have_Leadership_Incentive__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Leadership</label>
    <type>Checkbox</type>
</CustomField>