knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Preventive_Care_Agreement_Junction__c/fields/New_Hospital_Guarantee_Clause__c.field-meta.xml
<CustomField>
    <fullName>New_Hospital_Guarantee_Clause__c</fullName>
    <formula>IF (New_Hospital_Guarantee__c = TRUE,
( &quot;Notwithstanding the foregoing, Company shall pay to Provider $&quot; &amp;
text( floor(Preventive_Care_Agreement__r.Rate__c) ) + &quot;.&quot; + right( text( ( 1 + Preventive_Care_Agreement__r.Rate__c - floor( Preventive_Care_Agreement__r.Rate__c ) ) * 100 ), 2 ) &amp;
&quot;/ hour for shifts worked at Hospital during the first &quot; &amp;
CASE (text(Preventive_Care_Agreement__r.Months_Startup_Guarantee__c),
&quot;1&quot;, &quot;one&quot;,
&quot;2&quot;, &quot;two&quot;,
&quot;3&quot;, &quot;three&quot;,
&quot;4&quot;, &quot;four&quot;,
&quot;5&quot;, &quot;five&quot;,
&quot;6&quot;, &quot;six&quot;,
&quot;7&quot;, &quot;seven&quot;,
&quot;8&quot;, &quot;eight&quot;,
&quot;9&quot;, &quot;nine&quot;,
&quot;10&quot;, &quot;ten&quot;,
&quot;11&quot;, &quot;eleven&quot;,
&quot;12&quot;, &quot;twelve&quot;,&quot;N/A&quot;)

&amp; &quot; (&quot; &amp; text(Preventive_Care_Agreement__r.Months_Startup_Guarantee__c) &amp; &quot;) calendar months after the state date of Company’s contract with Hospital.&quot;),


&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Hospital Guarantee Clause</label>
    <type>Text</type>
</CustomField>