knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Preventive_Care_Agreement_Junction__c/fields/Payments__c.field-meta.xml
<CustomField>
    <fullName>Payments__c</fullName>
    <formula>TEXT(Preventive_Care_Agreement__r.Payments__c)</formula>
    <label>Payments</label>
    <type>Text</type>
</CustomField>