knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Preventive_Care_Agreement_Junction__c/fields/Payroll_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Cycle__c</fullName>
    <formula>Preventive_Care_Agreement__r.Payroll_Cycle__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payroll Cycle</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>