knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Preventive_Care_Agreement_Junction__c/fields/Preventive_Care_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Preventive_Care_Agreement__c</fullName>
    <label>Preventive Care Agreement</label>
    <referenceTo>PreventiveCareAgreement</referenceTo>
    <relationshipLabel>Preventive Care Agreement Junctions</relationshipLabel>
    <relationshipName>Preventive_Care_Agreement_Junctions</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>