knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Preventive_Care_Agreement_Junction__c/fields/Repayment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Repayment_Terms__c</fullName>
    <formula>TEXT(Preventive_Care_Agreement__r.Repayment_Terms__c)</formula>
    <label>Repayment Terms</label>
    <type>Text</type>
</CustomField>