knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Preventive_Care_Agreement_Junction__c/fields/Shift_Name__c.field-meta.xml
<CustomField>
    <fullName>Shift_Name__c</fullName>
    <formula>Preventive_Care_Agreement__r.Shift__r.Shift_Name__r.Name</formula>
    <label>Shift Name</label>
    <type>Text</type>
</CustomField>