knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Preventive_Care_Agreement_Junction__c/fields/Shift_Name_Facility_Rate_Table__c.field-meta.xml
<CustomField>
    <fullName>Shift_Name_Facility_Rate_Table__c</fullName>
    <formula>IF( ISPICKVAL(Preventive_Care_Agreement__r.ContractPaymentAgreement.Type__c, &apos;Shift&apos;), Preventive_Care_Agreement__r.Shift__r.Shift_Full_Name__c, TEXT( Preventive_Care_Agreement__r.Facility_Rate__r.RVU_Metric_Type__c ))</formula>
    <label>Shift Name Facility Rate Table</label>
    <type>Text</type>
</CustomField>