knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Preventive_Care_Agreement_Junction__c/fields/Three_Bonus_Installments__c.field-meta.xml
<CustomField>
    <fullName>Three_Bonus_Installments__c</fullName>
    <formula>Rate__c / 3</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Three Bonus Installments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>