knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Preventive_Care_Agreement_Junction__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <formula>Preventive_Care_Agreement__r.Type__r.Name</formula>
    <label>Type</label>
    <type>Text</type>
</CustomField>