knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Preventive_Care_Agreement_Junction__c/fields/Unit_of_Measure__c.field-meta.xml
<CustomField>
    <fullName>Unit_of_Measure__c</fullName>
    <formula>TEXT(Preventive_Care_Agreement__r.Unit_of_Measure__c)</formula>
    <label>Unit of Measure</label>
    <type>Text</type>
</CustomField>