knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Preventive_Care_Agreement_Junction__c/fields/Work_Commitment_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Work_Commitment_Frequency__c</fullName>
    <formula>TEXT(Preventive_Care_Agreement__r.Work_Commitment_Frequency__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Work Commitment Frequency</label>
    <type>Text</type>
</CustomField>