knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Preventive_Care_Agreement_Junction__c/fields/Work_Commitment_per_Month__c.field-meta.xml
<CustomField>
    <fullName>Work_Commitment_per_Month__c</fullName>
    <formula>Preventive_Care_Agreement__r.Work_Commitment_per_Month__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Work Commitment per Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>